deployments/infra/traefik-forward-auth/traefik-forward-auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: infra
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      annotations:
        SECRET_CLIENT_ID: /apps/infra/traefik-forward-auth/CLIENT_ID
        SECRET_CLIENT_SECRET: /apps/infra/traefik-forward-auth/CLIENT_SECRET
        SECRET_SECRET: /apps/infra/traefik-forward-auth/SECRET
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - image: rebelinblue/traefik-forward-auth:2.0.0-rc2
          name: traefik-forward-auth
          command:
            - sh
            - -c
          args:
            - source /env/secrets; /traefik-forward-auth -log-level=info
          ports:
            - containerPort: 4181
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 20
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /env
              name: env
      volumes:
        - name: env
          emptyDir: {}
        - name: podinfo
          downwardAPI:
            defaultMode: 420
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth
  namespace: infra
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - port: 80
      targetPort: 4181
      protocol: TCP
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-forward-auth-ingress
  namespace: infra
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/auth-trust-headers: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.infra.svc
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: auth.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-forward-auth
              servicePort: 80
  tls:
    - hosts:
        - auth.cluster.rebelinblue.com
      secretName: auth-tls
